// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Arrow /> should adopt the "backgroundColor" prop 1`] = `
<Arrow__SVG>
  <path
    d="M424.2 424.4L526.9 640V398.7"
    fill="#cbe37f"
    stroke="none"
    strokeWidth="24"
  />
  <path
    d="M848 318.3L424.2 424.4V158.9"
    fill="#bada55"
    stroke="none"
    strokeWidth="24"
  />
  <path
    d="M0 0l848 318.3L636.4 0H0z"
    fill="#cbe37f"
    stroke="none"
    strokeWidth="24"
  />
</Arrow__SVG>
`;

exports[`<Arrow /> should adopt the "height" prop 1`] = `
<Arrow__SVG
  height="1em"
>
  <path
    d="M424.2 424.4L526.9 640V398.7"
    fill="inherit"
    stroke="none"
    strokeWidth="24"
  />
  <path
    d="M848 318.3L424.2 424.4V158.9"
    stroke="none"
    strokeWidth="24"
  />
  <path
    d="M0 0l848 318.3L636.4 0H0z"
    fill="inherit"
    stroke="none"
    strokeWidth="24"
  />
</Arrow__SVG>
`;

exports[`<Arrow /> should adopt the "isGhost" prop 1`] = `
<Arrow__SVG>
  <path
    d="M424.2 424.4L526.9 640V398.7"
    fill="transparent"
    strokeWidth="24"
  />
  <path
    d="M848 318.3L424.2 424.4V158.9"
    fill="transparent"
    strokeWidth="24"
  />
  <path
    d="M0 0l848 318.3L636.4 0H0z"
    fill="transparent"
    strokeWidth="24"
  />
</Arrow__SVG>
`;

exports[`<Arrow /> should adopt the "showBreakpoint" prop 1`] = `
<Arrow__SVG
  showBreakpoint="100px"
>
  <path
    d="M424.2 424.4L526.9 640V398.7"
    fill="inherit"
    stroke="none"
    strokeWidth="24"
  />
  <path
    d="M848 318.3L424.2 424.4V158.9"
    stroke="none"
    strokeWidth="24"
  />
  <path
    d="M0 0l848 318.3L636.4 0H0z"
    fill="inherit"
    stroke="none"
    strokeWidth="24"
  />
</Arrow__SVG>
`;

exports[`<Arrow /> should render and match the snapshot 1`] = `
<Arrow__SVG>
  <path
    d="M424.2 424.4L526.9 640V398.7"
    fill="inherit"
    stroke="none"
    strokeWidth="24"
  />
  <path
    d="M848 318.3L424.2 424.4V158.9"
    stroke="none"
    strokeWidth="24"
  />
  <path
    d="M0 0l848 318.3L636.4 0H0z"
    fill="inherit"
    stroke="none"
    strokeWidth="24"
  />
</Arrow__SVG>
`;
